# lazybe

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  flake.nix  tmp_expand.rs
.github/workflows/: checks.yml
examples/kitchen-sink/: Cargo.toml
examples/kitchen-sink/examples/: api_custom_collection_api.rs  api_custom_entity.rs  api_minimal.rs  api_pagination.rs  api_validation.rs  dal_custom_id.rs  dal_filter.rs  dal_json.rs  dal_minimal.rs  typed_uri.rs
examples/todo/: Cargo.toml  README.md
examples/todo-postgres/: Cargo.toml  README.md
examples/todo-postgres/hurl/: delete.hurl  list.hurl
examples/todo-postgres/src/: main.rs  todo.rs
examples/todo/hurl/: list.hurl  update.hurl
examples/todo/src/: main.rs  todo.rs
examples/todo/src/entity/: mod.rs  staff.rs  todo.rs
examples/todo/tests/: list.hurl  update.hurl
lazybe/: Cargo.toml
lazybe-macro/: Cargo.toml
lazybe-macro/src/: common.rs  dal_entity.rs  dal_enum.rs  entity.rs  entity_endpoint.rs  enum.rs  lib.rs
lazybe-macros/: Cargo.toml
lazybe-macros/src/: entity.rs  lib.rs  newtype.rs  typed_uri.rs  typed_url.rs
lazybe-playground/: Cargo.toml
lazybe-playground/src/: main.rs  todo.rs
lazybe/src/: axum.rs  db.rs  entity.rs  filter.rs  lib.rs  oas.rs  page.rs  query.rs  router.rs  sort.rs
lazybe/src/entity/: mod.rs  ops.rs
lazybe/tests/: typed_uri.rs  typed_url.rs
