[workspace]
resolver = "3"
members = ["examples/*", "lazybe", "lazybe-macro"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Pat Losoponkul <pat.losoponkul@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/patextreme/lazybe"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
tokio = "1"
tracing = "0.1"
sea-query = "0.32"
serde = "1"
serde_json = "1"
sqlx = "0.8"
utoipa = "5"
uuid = "1"

lazybe = { path = "./lazybe" }
