[package]
name = "lazybe-macro"
description = "Proc macro for lazybe crate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "../README.md"
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8"
darling = "0.20"
proc-macro2 = "1"
quote = "1"
syn = "2"
