[package]
name = "lazybe"
description = "Derive boring CRUD API boilerplate for Rust backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "../README.md"
homepage.workspace = true
repository.workspace = true

[dependencies]
# core
lazybe-macros = { path = "../lazybe-macros", version = "0.1.0" }
tracing = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# optional
axum = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }

[features]
default = []
sqlite = []
postgres = []
axum = ["dep:axum"]
openapi = ["axum", "dep:utoipa"]
