[package]
name = "lazybe"
description = "Derive boring CRUD API boilerplate for Rust backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "../README.md"
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# core
lazybe-macros = { path = "../lazybe-macros", version = "0.1.1-alpha.2" }
tracing = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# optional
axum = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }

[features]
default = []
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
axum = ["dep:axum"]
openapi = ["axum", "dep:utoipa"]
