[package]
name = "lazybe"
description = "Derive boring CRUD boilerplate for Rust backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "../README.md"
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# core
tracing = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_qs = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# optional
axum = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

[dependencies.lazybe-macros]
path = "../lazybe-macros"
version = "0.1.2"         # bump

[dev-dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "json", "runtime-tokio"] }
sea-query = { workspace = true, features = ["with-chrono", "with-json"] }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
utoipa = { workspace = true, features = ["chrono"] }

[features]
default = []
sqlite = ["sqlx/sqlite", "sea-query/backend-sqlite"]
postgres = ["sqlx/postgres", "sea-query/backend-postgres"]
axum = ["dep:axum"]
openapi = ["axum", "dep:utoipa"]
