[package]
name = "example-todo-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lazybe = { workspace = true, features = ["postgres"] }
sea-query = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }

anyhow = "1"
tokio = { version = "1", features = ["full"] }
