[package]
name = "example-todo-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
lazybe = { workspace = true, features = ["postgres", "axum", "openapi"] }
sea-query = { workspace = true, features = ["with-chrono", "with-json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "chrono",
  "json",
  "postgres",
] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

tracing-subscriber = { version = "0.3" }
utoipa = { version = "5", features = ["chrono"] }
utoipa-axum = { version = "0.2" }
utoipa-redoc = { version = "6", features = ["axum"] }
