[package]
name = "example-todo"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
lazybe = { workspace = true, features = ["axum", "sqlite", "postgres"] }
sea-query = { workspace = true, features = ["with-chrono"] }
serde = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "chrono",
  "sqlite",
  "postgres",
] }

anyhow = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
